--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 body{
     background-color: lightgray;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 header{
@@ -21,11 +23,12 @@ header{
 
 .header-container nav li{
     display: inline-block;
-    color: white;
+    font-size: 1.2em;
 }
 
 .header-container nav ul{
     display: inline-block;
+    list-style-type: none;
 }
 
 .header-container nav img{
@@ -39,7 +42,7 @@ nav.topbar{
 
 nav.topbar .header-menu{
     height: 100%;
-    padding-left: 350px;
+    padding-left: 340px;
 }
 
 nav.topbar .login{
@@ -47,8 +50,15 @@ nav.topbar .login{
     text-align: right;
 }
 
+nav.topbar .login li{
+    background-color: white;
+    border-radius: 25px;
+    padding: 0 15px;
+}
+
 nav.topbar .header-menu li{
-    padding-left: 30px;
+    padding-left: 25px;
+    color: white;
 }
 
 
