--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ header{
     height: 600px;
 }
 
-.header-container{
+.header-container,
+.header-title{
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -42,7 +43,7 @@ nav.topbar{
 
 nav.topbar .header-menu{
     height: 100%;
-    padding-left: 340px;
+    padding-left: 300px;
 }
 
 nav.topbar .login{
@@ -61,6 +62,51 @@ nav.topbar .login button{
 nav.topbar .header-menu li{
     padding-left: 25px;
     color: white;
+}
+
+.header-title{
+    color: white;
+    height: 100%;
+    width: 800px;
+    min-width: 500px;
+    text-align: center;
+    padding-top: 120px;
+}
+
+.header-title h1{
+    font-size: 50px;
+    padding-bottom: 30px;
+}
+
+.header-title p{
+    line-height: 30px;
+    font-size: 1.3em;
+    padding-bottom: 20px;
+}
+
+.header-title button:first-of-type{
+    background-color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 15px 30px;
+    font-size: 1em;
+    margin-right: 20px;
+}
+
+
+
+.header-title button:last-of-type{
+    background-color: rgb(36, 36, 36);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 15px 30px;
+    font-size: 1em;
+}
+
+.down-arrow{
+    font-size: 20px;
+    margin-right: 10px;
 }
 
 
