--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body{
-    background-color: lightgray;
     font-family: Arial, Helvetica, sans-serif;
     
 }
@@ -17,7 +16,8 @@ header{
 }
 
 .header-container,
-.header-title{
+.header-title,
+.first-main-section{
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -93,8 +93,6 @@ nav.topbar .header-menu li{
     margin-right: 20px;
 }
 
-
-
 .header-title button:last-of-type{
     background-color: rgb(36, 36, 36);
     color: white;
@@ -107,6 +105,32 @@ nav.topbar .header-menu li{
 .down-arrow{
     font-size: 20px;
     margin-right: 10px;
+}
+
+.first-main-section{
+    padding-top: 100px;
+}
+
+.first-main-section .img-box{
+    width: 700px;
+    height: 100%;
+}
+
+.first-main-section .text-box{
+    font-size: 1.3em;
+    text-align: left;
+    padding: 30px 260px 0 150px;
+    width: 700px;
+    height: 100%;
+}
+
+.first-main-section .text-box h1{
+    font-size: 42px;
+    padding-bottom: 20px;
+}
+
+.first-main-section .text-box p{
+    line-height: 28px;
 }
 
 
